--- a/test/unittest/utils/CMakeLists.txt
+++ b/test/unittest/utils/CMakeLists.txt
@@ -25,12 +25,19 @@ add_executable(UtilsTest
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/utils.h # if all includes are linked, statistics-backend is required
     )
 
+if(MSVC)
+    target_compile_definitions(UtilsTest PRIVATE _CRT_DECLARE_NONSTDC_NAMES=0)
+endif(MSVC)
+
 target_include_directories(UtilsTest PRIVATE
+    ${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS}
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>
     $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include/${PROJECT_NAME}>)
 
-target_link_libraries(UtilsTest PUBLIC ${QT5_LIBRARY_LINKS} gtest)
+target_link_libraries(UtilsTest PUBLIC ${QT5_LIBRARY_LINKS} ${GTEST_LIBRARIES})
+
+get_win32_path_dependencies(UtilsTest TEST_FRIENDLY_PATH)
 
 set(UTILS_TEST_LIST
     to_QString
@@ -41,6 +48,10 @@ foreach(test_name ${UTILS_TEST_LIST})
     add_test(NAME utilsTest.${test_name}
             COMMAND UtilsTest
             --gtest_filter=utilsTest.${test_name}:*/utilsTest.${test_name}/*)
+
+    if(TEST_FRIENDLY_PATH)
+        set_tests_properties(utilsTest.${test_name} PROPERTIES ENVIRONMENT "PATH=${TEST_FRIENDLY_PATH}")
+    endif(TEST_FRIENDLY_PATH)
 endforeach()
 
 
@@ -65,13 +76,22 @@ add_executable(BackendUtilsTest
     ${BACKENDUTILS_TEST_HEADERS}
     )
 
+if(MSVC)
+    target_compile_definitions(BackendUtilsTest PRIVATE _CRT_DECLARE_NONSTDC_NAMES=0)
+endif(MSVC)
+
 target_include_directories(BackendUtilsTest PRIVATE
+    ${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS}
     ${PROJECT_SOURCE_DIR}/include)
 
 target_link_libraries(BackendUtilsTest PUBLIC
+    fastrtps
+    fastcdr
     fastdds_statistics_backend
     ${QT5_LIBRARY_LINKS}
-    gtest)
+    ${GTEST_LIBRARIES})
+
+get_win32_path_dependencies(BackendUtilsTest TEST_FRIENDLY_PATH)
 
 set(BACKENDUTILS_TEST_LIST
     id_to_QString
@@ -85,4 +105,8 @@ foreach(test_name ${BACKENDUTILS_TEST_LIST})
     add_test(NAME utilsBackendTest.${test_name}
             COMMAND BackendUtilsTest
             --gtest_filter=utilsBackendTest.${test_name}:*/utilsBackendTest.${test_name}/*)
+
+    if(TEST_FRIENDLY_PATH)
+        set_tests_properties(utilsBackendTest.${test_name} PROPERTIES ENVIRONMENT "PATH=${TEST_FRIENDLY_PATH}")
+    endif(TEST_FRIENDLY_PATH)
 endforeach()
