refactor statistics data chartboxes and series
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,7 +213,6 @@ set(PROJECT_HEADERS
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/EndpointModelItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/LocatorModelItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/ParticipantModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dynamic/DynamicDataModel.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/EntityContainerModelItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/ListItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/ListModel.h
@@ -228,8 +227,12 @@ set(PROJECT_HEADERS
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/SubListedListModel.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/TreeItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/TreeModel.h
-    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/DynamicChartBox.h
-    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/DynamicData.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/dynamic/DynamicDataChartBox.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/dynamic/DynamicStatisticsData.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/historic/HistoricDataChartBox.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/historic/HistoricStatisticsData.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/DataChartBox.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/DataModel.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/StatisticsData.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/utils.h
 )
@@ -242,7 +245,6 @@ set(PROJECT_SOURCES_NO_MAIN
     ${PROJECT_SOURCE_DIR}/src/Engine.cpp
     ${PROJECT_SOURCE_DIR}/src/model/dds/EndpointModelItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/dds/ParticipantModelItem.cpp
-    ${PROJECT_SOURCE_DIR}/src/model/dynamic/DynamicDataModel.cpp
     ${PROJECT_SOURCE_DIR}/src/model/ListItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/ListModel.cpp
     ${PROJECT_SOURCE_DIR}/src/model/logical/TopicModelItem.cpp
@@ -251,8 +253,12 @@ set(PROJECT_SOURCES_NO_MAIN
     ${PROJECT_SOURCE_DIR}/src/model/SubListedListModel.cpp
     ${PROJECT_SOURCE_DIR}/src/model/tree/TreeItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/tree/TreeModel.cpp
-    ${PROJECT_SOURCE_DIR}/src/statistics/DynamicChartBox.cpp
-    ${PROJECT_SOURCE_DIR}/src/statistics/DynamicData.cpp
+    ${PROJECT_SOURCE_DIR}/src/statistics/dynamic/DynamicDataChartBox.cpp
+    ${PROJECT_SOURCE_DIR}/src/statistics/dynamic/DynamicStatisticsData.cpp
+    ${PROJECT_SOURCE_DIR}/src/statistics/historic/HistoricDataChartBox.cpp
+    ${PROJECT_SOURCE_DIR}/src/statistics/historic/HistoricStatisticsData.cpp
+    ${PROJECT_SOURCE_DIR}/src/statistics/DataChartBox.cpp
+    ${PROJECT_SOURCE_DIR}/src/statistics/DataModel.cpp
     ${PROJECT_SOURCE_DIR}/src/statistics/StatisticsData.cpp
     ${PROJECT_SOURCE_DIR}/src/utils.cpp
 )
