--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
       - name: install Fast-CDR
         shell: pwsh
         run: >
-          git clone https://github.com/eProsima/Fast-CDR.git;
+          git clone https://github.com/eProsima/Fast-CDR.git --branch 1.1.x;
           cmake -Ax64 -T host=x64 -B build\fastcdr Fast-CDR;
           cmake --build build\fastcdr --config Release --target install
 
@@ -137,7 +137,7 @@ jobs:
       - name: install Fast-CDR
         shell: pwsh
         run: >
-          git clone https://github.com/eProsima/Fast-CDR.git;
+          git clone https://github.com/eProsima/Fast-CDR.git --branch 1.1.x;
           cmake -Ax64 -T host=x64 -B build\fastcdr Fast-CDR;
           cmake --build build\fastcdr --config Debug --target install
 
