--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,8 +209,6 @@ set(CMAKE_AUTORCC ON)
 # Compile program
 ###############################################################################
 set(PROJECT_HEADERS
-    ${PROJECT_SOURCE_DIR}/imports/TreeView/QMLTreeView/tree_model.h
-    ${PROJECT_SOURCE_DIR}/imports/TreeView/QMLTreeView/tree_item.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/backend/backend_types.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/backend/backend_utils.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/backend/Callback.h
@@ -235,6 +233,8 @@ set(PROJECT_HEADERS
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/statistics/EntityItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/SubListedListItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/SubListedListModel.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/ProblemTreeItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/ProblemTreeModel.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/TreeItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/TreeModel.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/DataChartBox.h
@@ -248,8 +248,6 @@ set(PROJECT_HEADERS
 )
 
 set(PROJECT_SOURCES_NO_MAIN
-    ${PROJECT_SOURCE_DIR}/imports/TreeView/QMLTreeView/tree_model.cpp
-    ${PROJECT_SOURCE_DIR}/imports/TreeView/QMLTreeView/tree_item.cpp
     ${PROJECT_SOURCE_DIR}/src/backend/backend_utils.cpp
     ${PROJECT_SOURCE_DIR}/src/backend/Listener.cpp
     ${PROJECT_SOURCE_DIR}/src/backend/SyncBackendConnection.cpp
@@ -265,6 +263,8 @@ set(PROJECT_SOURCES_NO_MAIN
     ${PROJECT_SOURCE_DIR}/src/model/physical/ProcessModelItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/statistics/EntityItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/SubListedListModel.cpp
+    ${PROJECT_SOURCE_DIR}/src/model/tree/ProblemTreeItem.cpp
+    ${PROJECT_SOURCE_DIR}/src/model/tree/ProblemTreeModel.cpp
     ${PROJECT_SOURCE_DIR}/src/model/tree/TreeItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/tree/TreeModel.cpp
     ${PROJECT_SOURCE_DIR}/src/statistics/DataChartBox.cpp
