Install python packages and colcon using eProsima-CI
Signed-off-by: Irene Bandera <irenebandera@eprosima.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -185,8 +185,22 @@ jobs:
       - name: Install GTest
         uses: ./src/Fast-DDS-monitor/.github/actions/install-gtest
 
+      - name: Install colcon
+        uses: eProsima/eProsima-CI/ubuntu/install_colcon@v0
+
       - name: Install Python packages
-        uses: ./src/Fast-DDS-monitor/.github/actions/install-python-packages
+        uses: eProsima/eProsima-CI/ubuntu/install_python_packages@v0
+        with:
+          packages: \
+            sphinx==3.0.3 \
+            doc8==0.8.0 \
+            sphinx_rtd_theme==0.4.3 \
+            sphinxcontrib.spelling==5.0.0 \
+            sphinxcontrib-imagehelper==1.1.1 \
+            vcstool \
+            GitPython \
+            setuptools \
+            gcovr==5
 
       - name: Fetch Fast DDS Statistics Backend repositories
         uses: ./src/Fast-DDS-monitor/.github/actions/fetch-fastdds-statistics-backend-repos
@@ -280,7 +294,19 @@ jobs:
 
       - uses: ./src/Fast-DDS-monitor/.github/actions/install-apt-packages
       - uses: ./src/Fast-DDS-monitor/.github/actions/install-gtest
-      - uses: ./src/Fast-DDS-monitor/.github/actions/install-python-packages
+      - uses: eProsima/eProsima-CI/ubuntu/install_colcon@v0
+      - uses: eProsima/eProsima-CI/ubuntu/install_python_packages@v0
+        with:
+          packages: \
+            sphinx==3.0.3 \
+            doc8==0.8.0 \
+            sphinx_rtd_theme==0.4.3 \
+            sphinxcontrib.spelling==5.0.0 \
+            sphinxcontrib-imagehelper==1.1.1 \
+            vcstool \
+            GitPython \
+            setuptools \
+            gcovr==5
       - uses: ./src/Fast-DDS-monitor/.github/actions/fetch-fastdds-statistics-backend-repos
 
       - name: Install Qt
@@ -321,7 +347,19 @@ jobs:
           git fetch --prune --unshallow
 
       - uses: ./src/Fast-DDS-monitor/.github/actions/install-apt-packages
-      - uses: ./src/Fast-DDS-monitor/.github/actions/install-python-packages
+      - uses: eProsima/eProsima-CI/ubuntu/install_colcon@v0
+      - uses: eProsima/eProsima-CI/ubuntu/install_python_packages@v0
+        with:
+          packages: \
+            sphinx==3.0.3 \
+            doc8==0.8.0 \
+            sphinx_rtd_theme==0.4.3 \
+            sphinxcontrib.spelling==5.0.0 \
+            sphinxcontrib-imagehelper==1.1.1 \
+            vcstool \
+            GitPython \
+            setuptools \
+            gcovr==5
 
       - name: Install uncrustify
         run: |
