--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,4 +7,5 @@ sphinx-tabs==3.2.0
 sphinx==4.3.1
 sphinxcontrib-imagehelper==1.1.1
 sphinxcontrib.spelling==7.2.1
-Jinja2<3.1
+Jinja2==3.1
+vcstool==0.3.0
