Refs #21585: Update CI actions
Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,153 +1,40 @@
+# Tests to run with workflow-dispatch, pull-request and push events
 name: test
 
 on:
-
   workflow_dispatch:
     inputs:
+
+      custom_version_build:
+        description: >
+          Use the custom version build from eProsima-CI.
+          If set to false, the workflow will run the tests for Fast DDS v2 and v3.
+        required: true
+        type: choice
+        default: 'custom'
+        options:
+          - custom
+          - v2
+          - v3
 
       dependencies_artifact_postfix:
         description: 'Postfix name to add to artifact name to download dependencies. This is use to download a specific artifact version from eProsima-CI.'
         required: true
+        type: string
         default: '_nightly'
 
   pull_request:
   push:
     branches:
       - main
-  schedule:
-    - cron: '0 0 * * *'
-
-env:
-  default_dependencies_artifact_postfix: '_nightly'
 
 jobs:
 
-#####################################################################
-# TEST
-
-  multiplatform-build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        cmake_build_type:
-          - Release
-          - Debug
-        os:
-          - ubuntu-20.04
-          - ubuntu-22.04
-          - windows-2019
-          - windows-2021
-
-    steps:
-
-      - name: Download repos file
-        uses: eProsima/eProsima-CI/multiplatform/get_file_from_repo@v0
-        with:
-          source_repository: eProsima/Fast-DDS-monitor
-          file_name: fastdds_monitor.repos
-          file_result: ${{ github.workspace }}/fastdds_monitor.repos
-
-      - name: Install Fast DDS dependencies
-        uses: eProsima/eProsima-CI/multiplatform/install_fastdds_dependencies@v0
-        with:
-          cmake_build_type: ${{ matrix.cmake_build_type }}
-
-      - name: Fetch Fast DDS Monitor repositories
-        uses: eProsima/eProsima-CI/multiplatform/vcs_import@v0
-        with:
-          vcs_repos_file:  ${{ github.workspace }}/fastdds_monitor.repos
-          destination_workspace: ${{ github.workspace }}/src
-
-      - name: Sync repository
-        uses: eProsima/eProsima-CI/external/checkout@v0
-        with:
-          path: ${{ github.workspace }}/src/fastdds_monitor
-
-      - name: Download dependencies and install requirements
-        uses: ./src/fastdds_monitor/.github/actions/project_dependencies
-        with:
-          os: ${{ matrix.os }}
-          cmake_build_type: ${{ matrix.cmake_build_type }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix || env.default_dependencies_artifact_postfix }}
-          secret_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Compile and run tests
-        uses: eProsima/eProsima-CI/multiplatform/colcon_build_test@v0
-        env:
-          QT_QPA_PLATFORM: 'offscreen'
-        with:
-          packages_names: fastdds_monitor
-          cmake_args: -DCMAKE_BUILD_TYPE=${{ matrix.cmake_build_type }}
-          colcon_meta_file: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/${{ runner.os }}/colcon.meta
-          workspace: ${{ github.workspace }}
-
-      - name: Upload artifact
-        uses: eProsima/eProsima-CI/external/upload-artifact@v0
-        if: ${{ failure() }}
-        with:
-          name: ${{ matrix.os }}_output
-          path: ${{ github.workspace }}/build/fastdds_monitor
-
-#####################################################################
-# CLANG
-
-  clang:
-    runs-on: ubuntu-22.04
-    steps:
-
-      - name: Download repos file
-        uses: eProsima/eProsima-CI/multiplatform/get_file_from_repo@v0
-        with:
-          source_repository: eProsima/Fast-DDS-monitor
-          file_name: fastdds_monitor.repos
-          file_result: ${{ github.workspace }}/fastdds_monitor.repos
-
-      - name: Install Fast DDS dependencies
-        uses: eProsima/eProsima-CI/multiplatform/install_fastdds_dependencies@v0
-        with:
-          cmake_build_type: ${{ matrix.cmake_build_type }}
-
-      - name: Fetch Fast DDS Monitor repositories
-        uses: eProsima/eProsima-CI/multiplatform/vcs_import@v0
-        with:
-          vcs_repos_file:  ${{ github.workspace }}/fastdds_monitor.repos
-          destination_workspace: ${{ github.workspace }}/src
-
-      - name: Sync repository
-        uses: eProsima/eProsima-CI/external/checkout@v0
-        with:
-          path: ${{ github.workspace }}/src/fastdds_monitor
-
-      - name: Download dependencies and install requirements
-        uses: ./src/fastdds_monitor/.github/actions/project_dependencies
-        with:
-          os: ubuntu-22.04
-          cmake_build_type: ${{ matrix.cmake_build_type }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix || env.default_dependencies_artifact_postfix }}
-          secret_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Compile and run tests
-        uses: eProsima/eProsima-CI/multiplatform/clang_build_test@v0
-        with:
-          packages_names: fastdds_monitor
-          colcon_meta_file: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/Linux/clang_colcon.meta
-          workspace: ${{ github.workspace }}
-
-      - name: Upload artifact
-        uses: eProsima/eProsima-CI/external/upload-artifact@v0
-        if: ${{ failure() }}
-        with:
-          name: clang_output
-          path: ${{ github.workspace }}/build/fastdds_monitor
-
-#####################################################################
-# UNCRUSTIFY
-
-  uncrustify:
-    runs-on: ubuntu-22.04
-    steps:
-
-      - name: Uncrustify
-        uses: eProsima/eProsima-CI/ubuntu/uncrustify@v0
-
+  reusable_tests:
+    name: reusable_tests
+    uses: ./.github/workflows/reusable-workflow.yml
+    with:
+      custom_version_build: ${{ inputs.custom_version_build || 'v3' }}
+      dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix || '_nightly' }}
+      ref: ${{ github.ref }}
+    secrets: inherit
