Refs #21926. Fix not using reduce version of static discovery
Signed-off-by: Ricardo González Moreno <ricardo@richiware.dev>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -333,7 +333,9 @@ else()
         ${QT5_LIBRARY_LINKS}
         fastcdr
         fastdds
-        fastdds_statistics_backend)
+        fastdds_statistics_backend
+        fastdds-low-bandwidth-transports
+    )
 
 endif()
 
