--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ log/
 
 ### Visual Studio ###
 .vs
+
+docs/rst/_static/css/eprosima-furo.css
+docs/rst/_static/eprosima-logo-white.png
+docs/rst/_templates/sidebar/
